# rust-knn

./: Cargo.toml  LICENSE.txt  README.md
data/: testing_irises.csv  training_irises.txt  unclassified_irises.csv
src/: app.rs  iris.rs  lib.rs  main.rs  read.rs  util.rs
src/iris/: classified.rs  params.rs  species.rs  unclassified.rs
src/iris/classified/: flat.rs
src/iris/unclassified/: flat.rs
src/util/: cmp.rs
