
[package]
name = "iris_classifier"
version = "1.1.3"
license = "MIT"
authors = ["Tomasz Nehring"]
description = "Classifies irises into one of 3 species: Setosa, Versicolor, Virginica."
edition = "2021"
documentation = "https://docs.rs/iris_classifier/latest/ic/"
repository = "https://github.com/Siiir/iris_classifier/"

[lib]
name = "ic"

[dependencies]
anyhow = "1.0.80"
clap = { version = "4.5.2", features = ["derive"] }
csv = "1.3.0"
derive_more = "0.99.17"
itertools = "0.12.1"
nalgebra = "0.32.4"
num-rational = "0.4.1"
num_enum = "0.7.2"
rayon = "1.9.0"
serde = { version = "1.0.197", features = ["derive"] }
strum = { version = "0.26.1", features = ["derive"] }
strum_macros = "0.26.1"
tabled = "0.15.0"
