[package]
name = "iris_classifier"
version = "2.2.0"
license = "MIT"
authors = ["Tomasz Nehring"]
description = "The app classifies irises into one of 3 species: Setosa, Versicolor, Virginica."
edition = "2021"
documentation = "https://docs.rs/iris_classifier/latest/ic/"
repository = "https://github.com/Siiir/iris_classifier/"

[lib]
name = "ic"

[features]
default = ["knn"]
knn = []

[dependencies]
anyhow = "1.0.80"
clap = { version = "4.5.2", features = ["derive"] }
csv = "1.3.0"
derive_more = "0.99.17"
itertools = "0.12.1"
nalgebra = { version = "0.32.4", features = ["serde"] }
num-rational = "0.4.1"
num_enum = "0.7.2"
rayon = "1.9.0"
serde = { version = "1.0.197", features = ["derive"] }
strum = { version = "0.26.1", features = ["derive"] }
strum_macros = "0.26.1"
tabled = "0.15.0"

[profile.comp_time]
inherits = "dev"
opt-level = 0
debug = 0
strip = "none"
lto = false
codegen-units = 256
incremental = true

